# CN-Town-of-Salem

./: README.md
client/: CMakeLists.txt  Caret.cpp  Caret.h  Chat.cpp  Chat.h  Client.cpp  Client.h  Graveyard.cpp  Graveyard.h  Interface.cpp  Interface.h  Minibox.cpp  Minibox.h  Role.cpp  Role.h  Rolecard.cpp  Rolecard.h  Rolelist.cpp  Rolelist.h  TownOfSalem.cpp  TownOfSalem.h  Townies.cpp  Townies.h  Will.cpp  Will.h  main.cpp
server/: CMakeLists.txt  main.cpp
